--- a/portfolio.html
+++ b/portfolio.html
@@ -167,8 +167,8 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer-content">
-            <div class="container">
+        <div class="footer-content container">
+            <div class="logo-footer-container">
     
                 <a href="" class="page-logo__footer">Web<span class="accent-white">Studio</span></a>
     
@@ -183,7 +183,7 @@
                 </address>
             </div>
             <!-- FOOTER Social networks -->
-            <div class="container">
+            <div class="">
                 <h3 class="footer-networks"> ПРИСОЕДИНЯЙТЕСЬ </h3>
                 <ul class="social-icons-footer">
                     <li class="social-icons-item-footer">
