--- a/portfolio.html
+++ b/portfolio.html
@@ -58,11 +58,17 @@
                         <article class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo1.jpg" alt="Технокряк" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Технокряк</h2>
                                 <p class="variety"> Веб-сайт</p>
                             </div>
+                            
                         </article>
                     </li>
 
