--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <div class="container-hero">
                 
                 <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <a href="" class="button"data-modal-open>Заказать услугу</a>
+                <button type="button" class="button-hero" data-modal-open>Заказать услугу</button>
+                <!--<a href="" class="button"data-modal-open>Заказать услугу</a>-->
             </div>
         </section>
     <!--</div>-->
