розмітка псевдоелементів в хедері на поточну сторінку

--- a/index.html
+++ b/index.html
@@ -123,13 +123,18 @@
         <!--МОДАЛЬНЕ ВІКНО-->
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button data-modal-close>
-                    <svg class="icons-svg">
-                        <use href="./imagesdecoration/sprite.svg#icon-astronaut-1-1">
+                
+                <div class="close-button">
+                <button aria-label="close" class="item-modal" data-modal-close>
+                    <!--<a href="" class="icon-modal-link">-->
+                    <svg class="icon-modal-svg">
+                        <use href="./imagesdecoration/close-button.svg#icon-close-button">
                         </use>
                     </svg>
+                    </a>
                 </button>
             </div>
+        </div>
         </div>
 
         <!--CONTAINER-->
