--- a/index.html
+++ b/index.html
@@ -145,7 +145,14 @@
                     Чем мы занимаемся</h2>
                 <ul class="section-photo">
                     <li class="photo">
+                        <article class="card-studio">
+                            <div class="thumb-studio">
                         <img src=" ./images/photo1.jpg" alt="робота за компом" width="370" />
+                      <div class="overlay-studio">
+                         <p class="overlay-studio-text">Десктопные приложения</p>
+                        </div>
+                    </div>
+                    </article>
                     </li>
                     <li class="photo">
                         <img src=" ./images/photo2.jpg" alt="робота за компом" width="370" />
