--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,9 @@
                 <ul class="flex-element">
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
-                                <img src="./imagesforportf/photo1.jpg" alt="Технокряк" width="370" />
+                                <img src="./imagesforportf/photo1.jpg" alt="Технокряк" width="370"/>
                                 <div class="overlay">
                                     <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового
@@ -67,13 +67,12 @@
                             <div class="element-container">
                                 <h2 class="title"> Технокряк</h2>
                                 <p class="variety"> Веб-сайт</p>
-                            </div>
-                            
-                        </article>
+                            </div>                     
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo2.jpg" alt="Постер New Orlean vs Golden Star"
                                     width="370" />
@@ -82,11 +81,11 @@
                                 <h2 class="title"> Постер New Orlean vs Golden Star</h2>
                                 <p class="variety"> Дизайн</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo3.jpg" alt="Ресторан Seafood" width="370" />
                             </div>
@@ -94,11 +93,11 @@
                                 <h2 class="title"> Ресторан Seafood</h2>
                                 <p class="variety"> Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo4.jpg" alt="Проект Prime" width="370" />
                             </div>
@@ -106,11 +105,11 @@
                                 <h2 class="title"> Проект Prime</h2>
                                 <p class="variety"> Маркетинг</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo5.jpg" alt="Проект Boxes" width="370" />
                             </div>
@@ -118,11 +117,11 @@
                                 <h2 class="title"> Проект Boxes</h2>
                                 <p class="variety"> Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo6.jpg" alt="Inspiration has no Borders" width="370" />
                             </div>
@@ -130,11 +129,11 @@
                                 <h2 class="title"> Inspiration has no Borders</h2>
                                 <p class="variety"> Веб-сайт</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo7.jpg" alt="Издание Limited Edition" width="370" />
                             </div>
@@ -142,11 +141,11 @@
                                 <h2 class="title"> Издание Limited Edition</h2>
                                 <p class="variety"> Дизайн</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo8.jpg" alt="Проект LAB" width="370" />
                             </div>
@@ -154,11 +153,11 @@
                                 <h2 class="title"> Проект LAB</h2>
                                 <p class="variety"> Маркетинг</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
 
                     <li class="item-element">
-                        <article class="card-portfolio">
+                        <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo9.jpg" alt="Growing Business" width="370" />
                             </div>
@@ -166,7 +165,7 @@
                                 <h2 class="title"> Growing Business</h2>
                                 <p class="variety"> Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                 </ul>
             </div>
