--- a/portfolio.html
+++ b/portfolio.html
@@ -77,6 +77,11 @@
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo2.jpg" alt="Постер New Orlean vs Golden Star"
                                     width="370" />
+                                    <div class="overlay">
+                                        <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                            платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Постер New Orlean vs Golden Star</h2>
@@ -89,6 +94,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo3.jpg" alt="Ресторан Seafood" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Ресторан Seafood</h2>
@@ -101,6 +111,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo4.jpg" alt="Проект Prime" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Проект Prime</h2>
@@ -113,6 +128,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo5.jpg" alt="Проект Boxes" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Проект Boxes</h2>
@@ -125,6 +145,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo6.jpg" alt="Inspiration has no Borders" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Inspiration has no Borders</h2>
@@ -137,6 +162,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo7.jpg" alt="Издание Limited Edition" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Издание Limited Edition</h2>
@@ -149,6 +179,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo8.jpg" alt="Проект LAB" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Проект LAB</h2>
@@ -161,6 +196,11 @@
                         <a href="" class="card-portfolio">
                             <div class="thumb-portfolio">
                                 <img src="./imagesforportf/photo9.jpg" alt="Growing Business" width="370" />
+                                <div class="overlay">
+                                    <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                             </div>
                             <div class="element-container">
                                 <h2 class="title"> Growing Business</h2>
