--- a/index.html
+++ b/index.html
@@ -154,11 +154,27 @@
                     </div>
                     </article>
                     </li>
+
                     <li class="photo">
+                        <article class="card-studio">
+                            <div class="thumb-studio">
                         <img src=" ./images/photo2.jpg" alt="робота за компом" width="370" />
+                        <div class="overlay-studio">
+                            <p class="overlay-studio-text">Мобильные приложения</p>
+                        </div>
+                        </div>
+                        </article>
                     </li>
+
                     <li class="photo">
+                        <article class="card-studio">
+                            <div class="thumb-studio">
                         <img src=" ./images/photo3.jpg" alt="техника" width="370" />
+                        <div class="overlay-studio">
+                            <p class="overlay-studio-text">Дизайнерские решения</p>
+                        </div>
+                        </div>
+                        </article>
                     </li>
                 </ul>
             </div>
