--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
                         <article class="card-studio">
                             <div class="thumb-studio">
                         <img src=" ./images/photo1.jpg" alt="робота за компом" width="370" />
+                        <div class="thumb-for-overlay">
                       <div class="overlay-studio">
                          <p class="overlay-studio-text">Десктопные приложения</p>
+                        </div>
                         </div>
                     </div>
                     </article>
