чем мы занимаемся коректа

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                             <div class="thumb-studio">
                         <img src=" ./images/photo1.jpg" alt="робота за компом" width="370" />
                         <div class="thumb-for-overlay">
-                      <div class="overlay-studio">
+                      
                          <p class="overlay-studio-text">Десктопные приложения</p>
-                        </div>
+                    
                         </div>
                     </div>
                     </article>
@@ -161,7 +161,7 @@
                         <article class="card-studio">
                             <div class="thumb-studio">
                         <img src=" ./images/photo2.jpg" alt="робота за компом" width="370" />
-                        <div class="overlay-studio">
+                        <div class="thumb-for-overlay">
                             <p class="overlay-studio-text">Мобильные приложения</p>
                         </div>
                         </div>
@@ -172,7 +172,7 @@
                         <article class="card-studio">
                             <div class="thumb-studio">
                         <img src=" ./images/photo3.jpg" alt="техника" width="370" />
-                        <div class="overlay-studio">
+                        <div class="thumb-for-overlay">
                             <p class="overlay-studio-text">Дизайнерские решения</p>
                         </div>
                         </div>
